# cpp-kick-starter

./: .gitignore  CMakeLists.txt  LICENSE  README.md
admin/: dev.sh  install-3rd.sh
cmake/: default.cmake
cmake/install/: 001.pthread.sh  002.gflag.sh  003.glog.sh  004.googletest.sh  005.thrift.sh
src/: CMakeLists.txt
src/divider/: CMakeLists.txt  divider.cpp  divider_test.cpp  tests.cpp
src/division/: CMakeLists.txt
test/: CMakeLists.txt
